--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orinoco</title>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 
     <!-- Google font-->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster&family=Pangolin&family=Yellowtail&display=swap"
-        rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/style.css">
 
 
 
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- Script-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </head>
 
 
@@ -32,42 +36,32 @@
     <div class="container-fluid">
         <header>
             <!-- barre de navigation-->
-            <nav class="navbar navbar-fixed-top">
+            
+            <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
 
-                <!--Bouton Menu en responsive-->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html">Orinoco</a>
-                </div>
-
-                <!-- Menu-->
-                <div class="collapse navbar-collapse navbar-color">
-                    <ul class="nav navbar-nav pull-right">
-
-                        <li><a href="index.html">Accueil</a></li>
-
-                        <li>
-                            <div class="btn-group">
-                                <button class="btn btn-nav-bg navbar-btn"><a href="produit.html">Menu 1</a></button>
-                                <button data-toggle="dropdown" class="btn btn-nav-bg navbar-btn dropdown-toggle"><span
-                                        class="caret"></span></button>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Sous-menu</a></li>
-                                    <li><a href="#">Sous-menu</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Sous-menu</a></li>
-                                </ul>
-                            </div>
+                <a class="navbar-brand" href="#">Orinoro</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler2"
+                    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarToggler2">
+                    <ul class="navbar-nav mr-auto mt-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Index</a>
                         </li>
-
-                        <li><a href="influence.html">Menu 2</a></li>
-                        <li><a href="association.html">Contact</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="produit.html">Produit</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="panier.html">Panier</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="confirm.html">Confirm</a>
+                        </li>
                     </ul>
                 </div>
+
             </nav>
         </header>
 
@@ -86,10 +80,10 @@
                 <div class="row">
                     <article class="text-center col-xs-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
-                            <a href="produit.html">
+                            <a href="produit.html" class="">
                                 <img src="../img/teddy_1.jpg"></img>
-                                <h3>Carotte - Variété etc</h3>
-                                <p>20€/kg</p>
+                                <h3 class="mt-3">Ours trop bien 1</h3>
+                                <p>20€</p>
                             </a>
                             <div class="underline-center-article"></div>
                             <div class="row">
@@ -108,14 +102,14 @@
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_2.jpg"></img>
-                                <h3>Carotte - Variété etc</h3>
-                                <p>20€/kg</p>
+                                <h3 class="mt-3">Ours trop bien 2</h3>
+                                <p>20€</p>
                             </a>
                             <div class="underline-center-article"></div>
                             <div class="row">
-                                <p class="col-xs-4 col-sm-4 mt-10">200g</p>
-                                <p class="col-xs-4 col-sm-4 mt-10">4.95€</p>
-                                <div class="col-xs-4 col-sm-4 mt-3">
+                                <p class="col-xs-3 col-sm-4 mt-10">200g</p>
+                                <p class="col-xs-3 col-sm-4 mt-10">4.95€</p>
+                                <div class="col-xs-3 col-sm-4 mt-3">
                                     <button type="button" class="btn btn-default"><i
                                             class="fa fa-shopping-basket"></i></button>
                                 </div>
@@ -128,8 +122,8 @@
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_3.jpg"></img>
-                                <h3>Carotte - Variété etc</h3>
-                                <p>20€/kg</p>
+                                <h3 class="mt-3">Ours trop bien 3</h3>
+                                <p>20€</p>
                             </a>
                             <div class="underline-center-article"></div>
                             <div class="row">
@@ -148,8 +142,8 @@
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_4.jpg"></img>
-                                <h3>Carotte - Variété etc</h3>
-                                <p>20€/kg</p>
+                                <h3 class="mt-3">Ours trop bien 4</h3>
+                                <p>20€</p>
                             </a>
                             <div class="underline-center-article"></div>
                             <div class="row">
@@ -168,7 +162,7 @@
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_5.jpg"></img>
-                                <h3>Carotte - Variété etc</h3>
+                                <h3 class="mt-3">Ours trop bien 5</h3>
                                 <p>20€/kg</p>
                             </a>
                             <div class="underline-center-article"></div>
@@ -225,8 +219,8 @@
                         <form class="form">
                             <div class="form-group">
                                 <textarea type="text" class="form-control" placeholder="Un conseil ?"
-                                    title="jeaispasencorequoiécririci" rows="5"></textarea>
-                                <button id="btnform" type="button" class="btn btn-default">Envoyez</button>
+                                    title="jeaispasencorequoiécririci" rows="3"></textarea>
+                                <button type="button" class="btn btn-secondary btn-form">Envoyez</button>
                             </div>
                         </form>
                     </article>
