--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                         </li>
                     </ul>
                 </div>
-
             </nav>
         </header>
 
@@ -78,7 +77,7 @@
                 <p>Nos produits, local, transformation maison blabla</p>
 
                 <div class="row">
-                    <article class="text-center col-xs-6 col-md-4 col-lg-3 mtb">
+                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
                             <a href="produit.html" class="">
                                 <img src="../img/teddy_1.jpg"></img>
@@ -98,7 +97,7 @@
                     </article>
 
 
-                    <article class="text-center col-xs-6 col-md-4 col-lg-3 mtb">
+                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_2.jpg"></img>
@@ -118,7 +117,7 @@
                     </article>
 
 
-                    <article class="text-center col-xs-6 col-md-4 col-lg-3 mtb">
+                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_3.jpg"></img>
@@ -138,7 +137,7 @@
                     </article>
 
 
-                    <article class="text-center col-xs-6 col-md-4 col-lg-3 mtb">
+                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_4.jpg"></img>
@@ -158,12 +157,12 @@
                     </article>
 
 
-                    <article class="text-center col-xs-6 col-md-4 col-lg-3 mtb">
+                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
                             <a href="produit.html">
                                 <img src="img/teddy_5.jpg"></img>
                                 <h3 class="mt-3">Ours trop bien 5</h3>
-                                <p>20€/kg</p>
+                                <p>20€</p>
                             </a>
                             <div class="underline-center-article"></div>
                             <div class="row">
