--- a/produit.html
+++ b/produit.html
@@ -108,11 +108,12 @@
                                 </select>
                               
                                 <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                                  <input type="checkbox" class="custom-control-input" id="customControlInline">
-                                  <label class="custom-control-label" for="customControlInline">Se rappeler de mon choix</label>
+                                   <!-- inline form--> 
+                                    <input type="checkbox" class="custom-control-input" id="customControlInline">
+                                    <input type="number" class="form-control">
                                 </div>
                               
-                                <button type="submit" class="btn btn-primary my-1 btn-panier"><a href="panier.html">Envoyer</a></button>     
+                                <button type="submit" class="btn btn-primary my-1 btn-panier"><a href="panier.html">Ajouter au panier</a></button>     
                               </form>
                         </article>
                     </div>
