--- a/index.html
+++ b/index.html
@@ -89,15 +89,6 @@
                                 <h3 class="mt-3">Ours trop bien 1</h3>
                                 <p>20€</p>
                             </a>
-                            <div class="underline-center-article"></div>
-                            <div class="row">
-                                <p class="col-xs-4 col-sm-4 mt-10">200g</p>
-                                <p class="col-xs-4 col-sm-4 mt-10">4.95€</p>
-                                <div class="col-xs-4 col-sm-4 mt-3">
-                                    <button type="button" class="btn btn-default"><i
-                                            class="fa fa-shopping-basket"></i></button>
-                                </div>
-                            </div>
                         </div>
                     </article>
 
@@ -109,15 +100,6 @@
                                 <h3 class="mt-3">Ours trop bien 2</h3>
                                 <p>20€</p>
                             </a>
-                            <div class="underline-center-article"></div>
-                            <div class="row">
-                                <p class="col-xs-3 col-sm-4 mt-10">200g</p>
-                                <p class="col-xs-3 col-sm-4 mt-10">4.95€</p>
-                                <div class="col-xs-3 col-sm-4 mt-3">
-                                    <button type="button" class="btn btn-default"><i
-                                            class="fa fa-shopping-basket"></i></button>
-                                </div>
-                            </div>
                         </div>
                     </article>
 
@@ -129,15 +111,6 @@
                                 <h3 class="mt-3">Ours trop bien 3</h3>
                                 <p>20€</p>
                             </a>
-                            <div class="underline-center-article"></div>
-                            <div class="row">
-                                <p class="col-xs-4 col-sm-4 mt-10">200g</p>
-                                <p class="col-xs-4 col-sm-4 mt-10">4.95€</p>
-                                <div class="col-xs-4 col-sm-4 mt-3">
-                                    <button type="button" class="btn btn-default"><i
-                                            class="fa fa-shopping-basket"></i></button>
-                                </div>
-                            </div>
                         </div>
                     </article>
 
@@ -149,15 +122,6 @@
                                 <h3 class="mt-3">Ours trop bien 4</h3>
                                 <p>20€</p>
                             </a>
-                            <div class="underline-center-article"></div>
-                            <div class="row">
-                                <p class="col-xs-4 col-sm-4 mt-10">200g</p>
-                                <p class="col-xs-4 col-sm-4 mt-10">4.95€</p>
-                                <div class="col-xs-4 col-sm-4 mt-3">
-                                    <button type="button" class="btn btn-default"><i
-                                            class="fa fa-shopping-basket"></i></button>
-                                </div>
-                            </div>
                         </div>
                     </article>
 
@@ -169,15 +133,6 @@
                                 <h3 class="mt-3">Ours trop bien 5</h3>
                                 <p>20€</p>
                             </a>
-                            <div class="underline-center-article"></div>
-                            <div class="row">
-                                <p class="col-xs-4 col-sm-4 mt-10">200g</p>
-                                <p class="col-xs-4 col-sm-4 mt-10">4.95€</p>
-                                <div class="col-xs-4 col-sm-4 mt-3">
-                                    <button type="button" class="btn btn-default"><i
-                                            class="fa fa-shopping-basket"></i></button>
-                                </div>
-                            </div>
                         </div>
                     </article>
                 </div>
@@ -238,5 +193,7 @@
         </footer>
     </div>
 </body>
+
+<script src="js/index.js"></script>
 
 </html>
