--- a/produit.html
+++ b/produit.html
@@ -110,8 +110,8 @@
                                 </div>
                                 
                                 <div class="form-inline">
-                                    <label class="my-1 mr-2" for="quantitée"> Quantitée : </label>
-                                    <input type="number" class="form-control" min="0" id="quantitée" placeholder="1" size="10">
+                                    <label class="my-1 mr-2" for="quantite"> Quantitée : </label>
+                                    <input type="number" class="form-control" min="0" id="quantite" placeholder="1" size="10">
                                 </div>
 
                                 <div>
