--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 
 
-    <!-- Script-->
+    <!-- Bootstrap CDN-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -32,8 +32,6 @@
 
 
 
-
-    <script src="js/index.js"></script>
 </head>
 
 
@@ -73,7 +71,6 @@
 
 
 
-
         <main>
             <!-- Les produits -->
             <section>
@@ -83,8 +80,8 @@
 
                 <div class="row">
                     <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
-                        <div class="article">
-                            <a href="produit.html" class="">
+                        <div id="ours1" class="article">
+                            <a>
                                 <img src="../img/teddy_1.jpg"></img>
                                 <h3 class="mt-3">Ours trop bien 1</h3>
                                 <p>20€</p>
@@ -95,8 +92,8 @@
 
                     <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
-                            <a href="produit.html">
-                                <img src="img/teddy_2.jpg"></img>
+                            <a>
+                                <img src="../img/teddy_2.jpg"></img>
                                 <h3 class="mt-3">Ours trop bien 2</h3>
                                 <p>20€</p>
                             </a>
@@ -106,8 +103,8 @@
 
                     <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
-                            <a href="produit.html">
-                                <img src="img/teddy_3.jpg"></img>
+                            <a>
+                                <img src="../img/teddy_3.jpg"></img>
                                 <h3 class="mt-3">Ours trop bien 3</h3>
                                 <p>20€</p>
                             </a>
@@ -117,8 +114,8 @@
 
                     <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
-                            <a href="produit.html">
-                                <img src="img/teddy_4.jpg"></img>
+                            <a>
+                                <img src="../img/teddy_4.jpg"></img>
                                 <h3 class="mt-3">Ours trop bien 4</h3>
                                 <p>20€</p>
                             </a>
@@ -128,8 +125,8 @@
 
                     <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
                         <div class="article">
-                            <a href="produit.html">
-                                <img src="img/teddy_5.jpg"></img>
+                            <a>
+                                <img src="../img/teddy_5.jpg"></img>
                                 <h3 class="mt-3">Ours trop bien 5</h3>
                                 <p>20€</p>
                             </a>
@@ -193,6 +190,8 @@
         </footer>
     </div>
 </body>
+
+
 
 <script src="js/index.js"></script>
 
