--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 
 
 
-
         <main>
             <!-- Les produits -->
             <section>
@@ -78,65 +77,11 @@
                 <div class="underline"></div>
                 <p>Nos produits, local, transformation maison blabla</p>
 
-                <div class="row">
-                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
-                        <div id="ours1" class="article">
-                            <a>
-                                <img src="../img/teddy_1.jpg"></img>
-                                <h3 class="mt-3">Ours trop bien 1</h3>
-                                <p>20€</p>
-                            </a>
-                        </div>
-                    </article>
-
-
-                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
-                        <div class="article">
-                            <a>
-                                <img src="../img/teddy_2.jpg"></img>
-                                <h3 class="mt-3">Ours trop bien 2</h3>
-                                <p>20€</p>
-                            </a>
-                        </div>
-                    </article>
-
-
-                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
-                        <div class="article">
-                            <a>
-                                <img src="../img/teddy_3.jpg"></img>
-                                <h3 class="mt-3">Ours trop bien 3</h3>
-                                <p>20€</p>
-                            </a>
-                        </div>
-                    </article>
-
-
-                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
-                        <div class="article">
-                            <a>
-                                <img src="../img/teddy_4.jpg"></img>
-                                <h3 class="mt-3">Ours trop bien 4</h3>
-                                <p>20€</p>
-                            </a>
-                        </div>
-                    </article>
-
-
-                    <article class="text-center col-sm-6 col-md-4 col-lg-3 mtb">
-                        <div class="article">
-                            <a>
-                                <img src="../img/teddy_5.jpg"></img>
-                                <h3 class="mt-3">Ours trop bien 5</h3>
-                                <p>20€</p>
-                            </a>
-                        </div>
-                    </article>
+                <div class="row" id="articles">
+                    
                 </div>
             </section>
         </main>
-
-
 
 
 
