--- a/panier.html
+++ b/panier.html
@@ -99,7 +99,7 @@
                         </article>
 
                         <article>
-                            <p>Total : <span  class="prix">350 €</span></p>
+                            <p>Total : <span  class="prix"></span></p>
                         </article>
                     </div>
 
