--- a/produit.html
+++ b/produit.html
@@ -73,7 +73,7 @@
                 <div id="article" class="row">
 
                     <div id="image" class="col-sm-6 thumbnail">
-                        
+
                     </div>
 
 
@@ -83,14 +83,11 @@
                             <p id="description"></p>
 
                             <h2>Taille</h2>
-                            <form>
+                            <form action="panier.html">
                                 <div class="form-inline">
                                     <label class="my-1 mr-2" for="color">Couleur :</label>
                                     <select class="custom-select my-1 mr-sm-2" id="color">
-
                                         <option selected>Choisissez une couleur</option>
-                                        
-
                                     </select>
                                 </div>
 
@@ -101,8 +98,11 @@
                                 </div>
 
                                 <div>
-                                    <button id="btn" type="submit" class="btn btn-secondary my-1 btn-panier">Ajouter au
-                                        panier</button>
+
+                                    <button id="btn" type="submit" class="btn btn-secondary my-1 btn-panier">
+                                        Ajouter au panier
+                                    </button>
+
                                 </div>
 
                             </form>
