--- a/panier.html
+++ b/panier.html
@@ -86,20 +86,25 @@
                                     <th scope="col">Prix</th>
                                   </tr>
                                 </thead>
-                                <tbody>
-                                  <tr id="contenu-tableau">
-                                    <th scope="row"><img src="img/teddy_1.jpg" class="img-thumbnail" class="vertical-center"></img></th>
-                                    <td>Ours en peluche trop bien</td>
-                                    <td class="center">2</td>
-                                    <td class="center">20€ / u</td>
-                                    <td class="center">40€</td>
-                                  </tr>
+
+
+
+
+
+                                <tbody id="produits">
+
+
                                 </tbody>
+
+
+
+
+
                               </table>
                         </article>
 
                         <article>
-                            <p>Total : <span  class="prix"></span></p>
+                            <p id="prix-total"></p>
                         </article>
                     </div>
 
