--- a/produit.html
+++ b/produit.html
@@ -93,8 +93,8 @@
 
                                 <div class="form-inline">
                                     <label class="my-1 mr-2" for="quantite"> Quantitée : </label>
-                                    <input type="number" class="form-control" min="0" id="quantite" placeholder="1"
-                                        size="10">
+                                    <input  id="quantite" type="number" class="form-control" min="0" placeholder="1"
+                                        size="10" autofocus>
                                 </div>
 
                                 <div>
