--- a/panier.html
+++ b/panier.html
@@ -126,16 +126,17 @@
                     <h2>Information de paiement</h2>
                     <p>Validez les informations de paiement pour finaliser la commande</p>
                     <div class="formulaire">
-                        <form>
+                        <form id="form" enctype="multipart/form-data" method="post" name="form-achat">
+
                             <!-- Nom / Prenom -->
                             <div class="form-row">
                                 <div class="form-group col-md-6">
-                                    <label for="inputName">Nom :</label>
-                                    <input type="name" class="form-control" placeholder="Nom" id="inputName">
+                                    <label for="inputName">Nom : </label>
+                                    <input type="text" class="form-control" placeholder="Nom" id="inputName" name="test123" pattern="[A-Za-z]+" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="inputLastName">Prénom :</label>
-                                    <input type="text" class="form-control" placeholder="Prénom" id="inputLastName">
+                                    <input type="text" class="form-control" placeholder="Prénom" id="inputLastName"  pattern="[A-Za-z]+" required>
                                 </div>
                             </div>
 
@@ -144,10 +145,10 @@
                                 <div class="form-group col-md-6">
                                     <label for="inputEmail4">Email</label>
                                     <input type="email" class="form-control" id="inputEmail4"
-                                        placeholder="exemple@messagerie.fr">
+                                        placeholder="exemple@messagerie.fr" required>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label for="">Téléphone</label>
+                                    <label for="">Téléphone (facultatif)</label>
                                     <input type="tel" class="form-control" id="inputPassword4"
                                         placeholder="01 23 45 67 89">
                                 </div>
@@ -155,44 +156,40 @@
 
                             <!-- Adresse -->
                             <div class="form-group">
-                                <label for="inputAddress">Address</label>
-                                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                                <label for="inputAddress">Adresse</label>
+                                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
                             </div>
-                            <div class="form-group">
-                                <label for="inputAddress2">Address 2</label>
-                                <input type="text" class="form-control" id="inputAddress2"
-                                    placeholder="Apartment, studio, or floor">
-                            </div>
-
-                            <!-- Nom Prenom -->
+                        
                             <div class="form-row">
                                 <div class="form-group col-md-6">
-                                    <label for="inputCity">City</label>
-                                    <input type="text" class="form-control" id="inputCity">
+                                    <label for="inputCity">Ville</label>
+                                    <input type="text" class="form-control" id="inputCity" required>
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="inputState">State</label>
+                                    <label for="inputState">Pays</label>
                                     <select id="inputState" class="form-control">
                                         <option selected>France</option>
                                         <option>Allemagne</option>
                                     </select>
                                 </div>
                                 <div class="form-group col-md-2">
-                                    <label for="inputZip">Zip</label>
-                                    <input type="text" class="form-control" id="inputZip">
+                                    <label for="inputZip">Code Postale</label>
+                                    <input type="text" class="form-control" id="inputZip"  pattern="[0-9]{5}" required>
                                 </div>
                             </div>
 
+                            <!-- sauvegarde donné-->
                             <div class="form-group">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" id="gridCheck">
                                     <label class="form-check-label" for="gridCheck">
-                                        Check me out
+                                        Sauvegardez les informations
                                     </label>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Valider la commande</button>
+                            <button id="btnSubmit" type="" class="btn btn-primary">Valider la commande</button>
                         </form>
+                        <div id="output"></div>
                     </div>
                 </section>
             </div>
