--- a/panier.html
+++ b/panier.html
@@ -187,7 +187,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <button id="btnSubmit" type="" class="btn btn-primary">Valider la commande</button>
+                            <button id="btnSubmit" type="button" class="btn btn-primary">Valider la commande</button>
                         </form>
                         <div id="output"></div>
                     </div>
