--- a/panier.html
+++ b/panier.html
@@ -132,11 +132,11 @@
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     <label for="inputName">Nom : </label>
-                                    <input type="text" class="form-control" placeholder="Nom" id="inputName" name="test123" pattern="[A-Za-z]+" required>
+                                    <input autocomplete="" type="text" class="form-control" placeholder="Nom" id="inputLastName" name="test123" pattern="[A-Za-z]+" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="inputLastName">Prénom :</label>
-                                    <input type="text" class="form-control" placeholder="Prénom" id="inputLastName"  pattern="[A-Za-z]+" required>
+                                    <input type="text" class="form-control" placeholder="Prénom" id="inputFirstName"  pattern="[A-Za-z]+" required>
                                 </div>
                             </div>
 
@@ -144,12 +144,12 @@
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     <label for="inputEmail4">Email</label>
-                                    <input type="email" class="form-control" id="inputEmail4"
+                                    <input type="email" class="form-control" id="inputEmail"
                                         placeholder="exemple@messagerie.fr" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="">Téléphone (facultatif)</label>
-                                    <input type="tel" class="form-control" id="inputPassword4"
+                                    <input type="tel" class="form-control"
                                         placeholder="01 23 45 67 89">
                                 </div>
                             </div>
