--- a/produit.html
+++ b/produit.html
@@ -51,13 +51,13 @@
                             <a class="nav-link" href="index.html">Index</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Produit</a>
+                            <a class="nav-link active">Produit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="panier.html">Panier</a>
+                            <a class="nav-link">Panier</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="confirm.html">Confirm</a>
+                            <a class="nav-link">Confirm</a>
                         </li>
                     </ul>
                 </div>
@@ -93,7 +93,7 @@
 
                                 <div class="form-inline">
                                     <label class="my-1 mr-2" for="quantite"> Quantitée : </label>
-                                    <input  id="quantite" type="number" class="form-control" min="1" placeholder="1"
+                                    <input  id="quantite" type="number" class="form-control" min="0" value="1"
                                         size="10" autofocus>
                                 </div>
 
@@ -170,5 +170,6 @@
 </body>
 
 <script src="js/produit.js"></script>
+<script src="js/commun.js"></script>
 
 </html>
