--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                 <div class="collapse navbar-collapse" id="navbarToggler2">
                     <ul class="navbar-nav mr-auto mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Index</a>
+                            <a class="nav-link active">Index</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="produit.html">Produit</a>
+                            <a class="nav-link">Produit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="panier.html">Panier</a>
+                            <a class="nav-link">Panier</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="confirm.html">Confirm</a>
+                            <a class="nav-link">Confirm</a>
                         </li>
                     </ul>
                 </div>
@@ -143,5 +143,6 @@
 
 
 <script src="js/index.js"></script>
+<script src="js/commun.js"></script>
 
 </html>
