--- a/produit.html
+++ b/produit.html
@@ -93,8 +93,8 @@
 
                                 <div class="form-inline">
                                     <label class="my-1 mr-2" for="quantite"> Quantitée : </label>
-                                    <input  id="quantite" type="number" class="form-control" min="0" value="1"
-                                        size="10" autofocus>
+                                    <input  id="quantite" type="number" class="form-control" min="1" placeholder="0"
+                                        size="10" autofocus required>
                                 </div>
 
                                 <div>
