--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="underline"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima placeat distinctio qui pariatur ea veritatis officia adipisci autem sit, alias saepe repellendus quos architecto ratione nam obcaecati deserunt expedita quas!</p>
 
+                <!-- Rajoue des produits en Javsacript-->
                 <div class="row" id="articles">
-                    
                 </div>
                 
             </section>
