--- a/produit.html
+++ b/produit.html
@@ -65,15 +65,17 @@
             <section class="container">
                 <div id="article" class="row">
 
+                    <!-- Image-->
                     <div id="image" class="col-sm-6 thumbnail">
                     </div>
 
+                    <!-- Produit -->
                     <div class="col-sm-6">
                         <article>
                             <h1 id="name"></h1>
                             <p id="description"></p>
+                            
                             <h2>Personnaliser</h2>
-
                             <form action="panier.html">
                                 <div class="form-inline">
                                     <label class="my-1 mr-2" for="color">Couleur :</label>
